<resources>
    <string name="Own">Own</string>
    <string name="Rent">Rent</string>
    <string name="NotSpecified">Not Specified</string>
    <string-array name="enum_address_type">
        <item>@string/Own</item>
        <item>@string/Rent</item>
        <item>@string/NotSpecified</item>
    </string-array>
    <string-array name="enum_amortization_type">
        <item>Fixed Rate</item>
        <item>Graduated Payment Mortgage (GPM)</item>
        <item>Adjustable Rate Mortgage (ARM)</item>
        <item>Other</item>
    </string-array>
    <string name="Borrower">Borrower</string>
    <string name="CoBorrower">Co-Borrower</string>
    <string-array name="enum_borrower_type">
        <item>@string/Borrower</item>
        <item>@string/CoBorrower</item>
    </string-array>
    <string-array name="enum_completed_by">
        <item>Jointly</item>
        <item>Not Jointly</item>
    </string-array>
    <string-array name="enum_declarations_property_type">
        <item>Primary Residence</item>
        <item>Second Home</item>
        <item>Investment</item>
        <item>Not Specified</item>
    </string-array>
    <string-array name="enum_housing_expense_type">
        <item>Present</item>
        <item>Proposed</item>
    </string-array>
    <string-array name="enum_loan_type">
        <item>Conventional</item>
        <item>Federal Housing Administration (FHA)</item>
        <item>Veterans Affairs (VA)</item>
        <item>Farmers Home Administration (FmHA)</item>
        <item>Other</item>
    </string-array>
    <string name="Married">Married</string>
    <string name="NotMarried">Not Married</string>
    <string name="Separated">Separated</string>
    <string-array name="enum_marital_status">
        <item>@string/Married</item>
        <item>@string/NotMarried</item>
        <item>@string/Separated</item>
        <item>@string/NotSpecified</item>
    </string-array>
    <string-array name="enum_property_type">
        <item>Primary Residence</item>
        <item>Secondary Residence</item>
        <item>Investment</item>
    </string-array>
    <string-array name="enum_purchase_type">
        <item>Purchase</item>
        <item>Refinance</item>
        <item>Construction</item>
        <item>Permanent Construction</item>
        <item>Other</item>
    </string-array>
    <string-array name="enum_titled">
        <item>Solely By Yourself</item>
        <item>Jointly (with spouse)</item>
        <item>Jointly (not with spouse)</item>
        <item>Not Specified</item>
    </string-array>
    <string name="Accounts">Accounts</string>
    <string name="add_account_dialog_title">Add Account</string>
    <string name="add_address_dialog_title">Add Address</string>
    <string name="add_auto_dialog_title">Add Automobile</string>
    <string name="add_borrower_dialog_title">Add Borrower</string>
    <string name="add_deposit_dialog_title">Add Account</string>
    <string name="add_image_description">An image used when adding objects</string>
    <string name="AddAccount">Add Account</string>
    <string name="AddAddress">Add Address</string>
    <string name="AddAuto">Add Automobile</string>
    <string name="AddBorrower">Add Borrower</string>
    <string name="AddDeposit">Add Deposit</string>
    <string name="Addresses">Addresses</string>
    <string name="app_name">Loan Management</string>
    <string name="app_status_approved">APPROVED</string>
    <string name="app_status_pending">PENDING</string>
    <string name="app_status_rejected">REJECTED</string>
    <string name="application_processed_successfully">Loan application was processed successfully!</string>
    <string name="Approve">Approve</string>
    <string name="AssetsAndLiabilities">Assets And Liabilities</string>
    <string name="Automobiles">Automobiles</string>
    <string name="borrower_dialog_title">Borrower</string>
    <string name="Borrowers">Borrowers</string>
    <string name="btn_jointly">Jointly</string>
    <string name="btn_not_jointly">Not Jointly</string>
    <string name="chk_any_judgements">Any judgements</string>
    <string name="chk_borrowed_down_payment">Borrowed down payment</string>
    <string name="chk_co_maker_note">Co-maker note</string>
    <string name="chk_declared_bankruptcy">Declared bankruptcy</string>
    <string name="chk_delinquent">Have been delinquent on another loan</string>
    <string name="chk_lawsuit">Have been involved in a lawsuit</string>
    <string name="chk_obligated_on_any_loan">Obligated on another loan</string>
    <string name="chk_obligated_to_pay_alimony">Obligated to pay alimony</string>
    <string name="chk_ownership_interest">Ownership interest</string>
    <string name="chk_permanent_resident">Permanent resident</string>
    <string name="chk_property_foreclosed">Have foreclosed on property</string>
    <string name="chk_primary_residence">Primary resident</string>
    <string name="chk_self_employed">Self employed</string>
    <string name="chk_us_citizen">U.S. citizen</string>
    <string name="Declarations">Declarations</string>
    <string name="delete_account_msg">Are you sure you want to delete the selected account?</string>
    <string name="delete_account_with_id_msg">Are you sure you want to delete account \'%1s\'?</string>
    <string name="delete_address_msg">Are you sure you want to delete the selected address?</string>
    <string name="delete_address__with_line1_msg">Are you sure you want to delete the \'%1s\' address?</string>
    <string name="delete_auto_msg">Are you sure you want to delete the selected automobile?</string>
    <string name="delete_auto_with_description_msg">Are you sure you want to delete auto \'%1s\'?</string>
    <string name="delete_borrower_msg">Are you sure you want to delete borrower \'%1s\'?</string>
    <string name="delete_deposit_msg">Are you sure you want to delete the selected deposit?</string>
    <string name="delete_deposit_with_description_msg">Are you sure you want to delete deposit \'%1s\'?</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_image_description">An image used when deleting objects</string>
    <string name="Deposits">Deposits</string>
    <string name="Details">Details</string>
    <string name="edit_account_dialog_title">Edit Account</string>
    <string name="edit_address_dialog_title">Edit Address</string>
    <string name="edit_auto_dialog_title">Edit Automobile</string>
    <string name="edit_borrower_dialog_title">Edit Borrower</string>
    <string name="edit_deposit_dialog_title">Edit Cash Deposit</string>
    <string name="edit_image_description">An image used when editing objects</string>
    <string name="empty_accounts_message">There are no accounts.</string>
    <string name="empty_addr_line1">*no address line 1 specified*</string>
    <string name="empty_autos_message">There are no automobiles.</string>
    <string name="empty_borrowers_message">There are no borrowers for this loan application.</string>
    <string name="empty_deposits_message">There are no cash deposits.</string>
    <string name="empty_evaluations_message">There are no available application evaluations.</string>
    <string name="empty_statuses_message">There are no available application statuses.</string>
    <string name="evaluate_dialog_title">Evaluate</string>
    <string name="evaluation_processed_successfully">Loan evaluation was processed successfully!</string>
    <string name="Evaluations">Evaluations</string>
    <string name="evaluations_request_dialog_title">Evaluations Request</string>
    <string name="evaluations_request_dialog_msg">Obtaining available application evaluations&#8230;</string>
    <string name="HousingExpense">Housing Expense</string>
    <string name="hint_date">MM/DD/YYYY</string>
    <string name="hint_dollar_amount">0.00</string>
    <string name="hint_evaluation_explanation">Reason for approval/rejection decision</string>
    <string name="hint_interest_rate">0.0000</string>
    <string name="hint_year">YYYY</string>
    <string name="item_application_evaluations">Application\nEvaluations</string>
    <string name="item_application_evaluations_description">A list of available application evaluations</string>
    <string name="item_application_statuses">Application\nStatuses</string>
    <string name="item_application_statuses_description">A list of available application statuses</string>
    <string name="item_assets_and_liabilities_description">Accounts, automobiles, and deposits</string>
    <string name="item_borrowers_description">Borrower\'s name, employment, and declarations</string>
    <string name="item_collapse_all">Collapse All</string>
    <string name="item_help">Help\n</string>
    <string name="item_help_description">Information on using the Home Loan app</string>
    <string name="item_housing_expense_description">Costs like insurance and real estate taxes</string>
    <string name="item_jump_to">Jump</string>
    <string name="item_loan_description">Loan term, rate, and property information</string>
    <string name="item_new_application">Loan\nApplication</string>
    <string name="item_new_application_description">Create a new home loan application</string>
    <string name="item_refresh">Refresh</string>
    <string name="item_send_application">Save Application</string>
    <string name="item_separator">, </string>
    <string name="item_sort">Sort</string>
    <string name="item_sort_by_date">By Date</string>
    <string name="item_sort_by_name">By Name</string>
    <string name="item_sort_by_rate">By Rate</string>
    <string name="item_sort_by_ssn">By SSN</string>
    <string name="item_sort_by_status">By Status</string>
    <string name="label_account_number">Account #:</string>
    <string name="label_address_type">Type:</string>
    <string name="label_amortization_type">Amortization Type:</string>
    <string name="label_addr_line_1">Address (Line 1):</string>
    <string name="label_addr_line_2">Address (Line 2):</string>
    <string name="label_applicant">Applicant:</string>
    <string name="label_asset_amount">Amount:</string>
    <string name="label_asset_description">Description:</string>
    <string name="label_association_dues">Home Owner Association Dues:</string>
    <string name="label_business_type">Business Type:</string>
    <string name="label_city">City:</string>
    <string name="label_completed_by">Assets and Liabilities Section Completed:</string>
    <string name="label_county">County:</string>
    <string name="label_credit_score">Credit Score:</string>
    <string name="label_description">Description:</string>
    <string name="label_dob">Date Of Birth:</string>
    <string name="label_down_payment_source">Source Of Down Payment:</string>
    <string name="label_employer_name">Employer Name:</string>
    <string name="label_explanation">Explanation:</string>
    <string name="label_first_name">First Name:</string>
    <string name="label_first_mortgage">First Mortgage:</string>
    <string name="label_hazard_insurance">Hazard Insurance:</string>
    <string name="label_housing_expense_type">Housing Expense Type:</string>
    <string name="label_insurance_cost">Insurance Cost:</string>
    <string name="label_interest_rate">Interest Rate:</string>
    <string name="label_last_name">Last Name:</string>
    <string name="label_loan_amount">Amount:</string>
    <string name="label_loan_months">Number Of Months:</string>
    <string name="label_loan_type">Type:</string>
    <string name="label_marital_status">Marital Status:</string>
    <string name="label_middle_name">Middle Name:</string>
    <string name="label_phone">Phone:</string>
    <string name="label_purchase_type">Purchase Type:</string>
    <string name="label_ssn">SSN:</string>
    <string name="label_title">Title:</string>
    <string name="label_titled">Titled:</string>
    <string name="label_years_in_school">Years In School:</string>
    <string name="Loan">Loan</string>
</resources>