<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/panel_margin"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/declarations_scroller_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lbl_titled"
                style="@style/loanmanagement.LeftLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_titled" />

            <Spinner
                android:id="@+id/cbx_titled"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/enum_titled" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/chk_us_citizen"
            style="@style/loanmanagement.CheckBox"
            android:text="@string/chk_us_citizen" />

        <CheckBox
            android:id="@+id/chk_obligated_on_any_loan"
            style="@style/loanmanagement.CheckBox"
            android:text="@string/chk_obligated_on_any_loan" />

        <CheckBox
            android:id="@+id/chk_obligated_to_pay_alimony"
            style="@style/loanmanagement.CheckBox"
            android:text="@string/chk_obligated_to_pay_alimony" />

        <CheckBox
            android:id="@+id/chk_ownership_interest"
            style="@style/loanmanagement.CheckBox"
            android:text="@string/chk_ownership_interest" />

        <CheckBox
            android:id="@+id/chk_permanent_resident"
            style="@style/loanmanagement.CheckBox"
            android:text="@string/chk_permanent_resident" />

        <CheckBox
            android:id="@+id/chk_primary_residence"
            style="@style/loanmanagement.CheckBox"
            android:text="@string/chk_primary_residence" />

        <CheckBox
            android:id="@+id/chk_property_foreclosed"
            style="@style/loanmanagement.CheckBox"
            android:text="@string/chk_property_foreclosed" />

        <CheckBox
            android:id="@+id/chk_judgements"
            style="@style/loanmanagement.CheckBox"
            android:text="@string/chk_any_judgements" />

        <CheckBox
            android:id="@+id/chk_borrowed_down_payment"
            style="@style/loanmanagement.CheckBox"
            android:text="@string/chk_borrowed_down_payment" />

        <CheckBox
            android:id="@+id/chk_co_maker_note"
            style="@style/loanmanagement.CheckBox"
            android:text="@string/chk_co_maker_note" />

        <CheckBox
            android:id="@+id/chk_declared_bankruptcy"
            style="@style/loanmanagement.CheckBox"
            android:text="@string/chk_declared_bankruptcy" />

        <CheckBox
            android:id="@+id/chk_delinquent"
            style="@style/loanmanagement.CheckBox"
            android:text="@string/chk_delinquent" />

        <CheckBox
            android:id="@+id/chk_lawsuit"
            style="@style/loanmanagement.CheckBox"
            android:text="@string/chk_lawsuit" />
    </LinearLayout>

</ScrollView>