<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_send_application"
        android:icon="@drawable/ic_send"
        android:onClick="handleProcess"
        android:showAsAction="ifRoom"
        android:title="@string/item_send_application"/>
    <item
        android:id="@+id/action_collapse"
        android:icon="@drawable/ic_collapse"
        android:onClick="handleCollapseAll"
        android:showAsAction="ifRoom"
        android:title="@string/item_collapse_all"/>
    <item
        android:id="@+id/ic_jump_to"
        android:icon="@drawable/ic_jump_to"
        android:showAsAction="ifRoom"
        android:title="@string/item_jump_to">
        <menu>
            <item
                android:id="@+id/jump_to_loan"
                android:onClick="onJumpToLoan"
                android:title="@string/Loan"/>
            <item
                android:id="@+id/jump_to_borrowers"
                android:onClick="onJumpToBorrowers"
                android:title="@string/Borrowers"/>
            <item
                android:id="@+id/jump_to_housing_expense"
                android:onClick="onJumpToHousingExpense"
                android:title="@string/HousingExpense"/>
            <item
                android:id="@+id/jump_to_assets"
                android:onClick="onJumpToAssets"
                android:title="@string/AssetsAndLiabilities"/>
        </menu>
    </item>

</menu>